fix z-index

--- a/client/src/components/Channels/Channels.scss
+++ b/client/src/components/Channels/Channels.scss
@@ -18,6 +18,7 @@
         top: 0;
         right: 0;
         left: 0;
+        z-index: -1;
         display: block;
         width: 100%;
         height: 800px;
